--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -57,7 +57,7 @@
 
         <Style TargetType="StackPanel" x:Key="StackPanelStyle">
             <Style.Setters>
-                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
             </Style.Setters>
         </Style>
 
@@ -66,11 +66,11 @@
                 <Setter Property="FontSize" Value="22"/>
                 <Setter Property="TextAlignment" Value="Center"/>
                 <Setter Property="BorderThickness" Value="1"/>
-                <Setter Property="Margin" Value="30,0"/>
+                <Setter Property="Margin" Value="20,0"/>
             </Style.Setters>
             <Style.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="7"/>
+                    <Setter Property="CornerRadius" Value="5"/>
                 </Style>
             </Style.Resources>
         </Style>
@@ -94,14 +94,13 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="45*"/>
             <ColumnDefinition Width="55*"/>
+            <ColumnDefinition Width="45*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0">
+        <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="20*"/>
-                <RowDefinition Height="60*"/>
+                <RowDefinition Height="80*"/>
                 <RowDefinition Height="20*"/>
             </Grid.RowDefinitions>
 
@@ -110,15 +109,12 @@
                     <Label Style="{StaticResource LabelStyle}">
                         Введите строку кода
                     </Label>
-                    <TextBox Style="{StaticResource TextBoxStyle}" Text="{Binding Code}"></TextBox>
+                    <TextBox Style="{StaticResource TextBoxStyle}" Text="{Binding Code}" Height="341" ></TextBox>
                 </StackPanel>
             </Grid>
 
+
             <Grid Grid.Row="1">
-
-            </Grid>
-
-            <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -136,7 +132,7 @@
             </Grid>
         </Grid>
 
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="0">
             <DataGrid  Style="{StaticResource DataGrid}" ItemsSource="{Binding Lexemes}" AutoGenerateColumns="False">
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
